- Replacing seldom used we_images_url JavaScript variable with we_theme_url + '/images'. (index.template.php, ManageMembergroups.template.php, Themes.template.php, suggest.js, register.js) * Minor fixed to post page button layout. (sections.css) * Spacinazi. Please note that 'input_attr' now expects an extra space. I'm not wasting CPU cycles on just two specific form entries. (Register.template.php, Profile.template.php, Profile-Modify.php) ! Harmonized descriptions for smileys and smiley-based topic icons. Also fixed bad French translations for these. (index.language.php, Install.language.php) + Added the Edit smiley to the Aaron smiley set. (edit.gif) * Smileys that are not installed by default in the visible postbox area should be in the popup, rather than hidden. (install.sql)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -634,15 +634,15 @@ ul.post_options
 #bbcBox_message
 	margin: .75em .5em
 	div
-		margin: .2em 0
+		margin: 2px
+	div, img
 		vertical-align: top
-		img
-			margin: 0 1px 0 0
-			vertical-align: top
 	> div
 		margin: 0
 	select
 		margin: 0 2px
+	.bbc_button div
+		margin: 2px 0
 
 // The smiley strip
 #smileyBox_message
